# DDR-RAM-partition-system-

./: README.md
ddr-ram-partition-system/: CMakeLists.txt  License  Project-Structure  System
ddr-ram-partition-system/include/: CMakeLists.txt  config.h
ddr-ram-partition-system/scripts/: build_and_run.sh
ddr-ram-partition-system/src/: ddr_memory.c  ddr_memory.h  gaming_partition.c  gaming_partition.h  main.c  rw_partition.c  rw_partition.h  startup_code.h  userspace_app.c  userspace_app.h
ddr-ram-partition-system/tests/: test_main.c  test_runner.c
